feat: step 1 (#2329)
Co-authored-by: mia.meow <mia.meow@kakaocorp.com>